--- a/page8.html
+++ b/page8.html
@@ -57,131 +57,104 @@
 </main>
 
 <script type="module">
-import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
-import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+  /***** ▼ Firebase 초기 설정 ▼ *****/
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
+  import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
 
-const firebaseConfig = {
-  apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
-  authDomain: "to-be-a-master.firebaseapp.com",
-  projectId: "to-be-a-master",
-  storageBucket: "to-be-a-master.firebasestorage.app",
-  messagingSenderId: "223906864735",
-  appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
-  measurementId: "G-SXF1BMH4DB"
-};
+  const firebaseConfig = {
+    apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
+    authDomain: "to-be-a-master.firebaseapp.com",
+    projectId: "to-be-a-master",
+    storageBucket: "to-be-a-master.firebasestorage.app",
+    messagingSenderId: "223906864735",
+    appId: "1:223906864735:web:a04b3fdfa88e48a99905ea",
+    measurementId: "G-SXF1BMH4DB"
+  };
 
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  /***** ▲ Firebase 설정 끝 ▲ *****/
 
-const PAGE = 8;
-const NEXT_PAGE_URL = "page9.html";
+  /***** ▼ 페이지 설정 ▼ *****/
+  const PAGE = 7;
+  const NEXT_PAGE_URL = "page8.html";
+  /***** ▲ 설정 끝 ▲*/
 
-(function(){
-  const qs = new URLSearchParams(location.search);
-  const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
-  const nextBtn = document.getElementById('nextBtn');
-  let sending = false;
+  (function(){
+    const qs = new URLSearchParams(location.search);
+    const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
+    const nextBtn = document.getElementById('nextBtn');
+    let sending = false;
 
-  // 문항 렌더링
-  const SEC3 = [
-    ["정신질환자들은 정서적이고, 반응적이고 따뜻한 것 같다.","s3_q1","P7_S3_Q1",7],
-    ["정신질환자들에게서 따뜻함이 느껴진다.","s3_q2","P7_S3_Q2",7],
-    ["정신질환자들은 열린 마음을 갖고 있고, 분명하게 생각할 수 있는 것 같다.","s3_q3","P7_S3_Q3",7],
-    ["정신질환자들은 깊이가 없게 느껴진다.","s3_q4","P7_S3_Q4",7],
-    ["정신질환자들은 마치 로봇처럼 기계적이고 차갑게 느껴진다.","s3_q5","P7_S3_Q5",7],
-    ["정신질환자들은 인간이라기보다는 물체에 가깝게 생각된다.","s3_q6","P7_S3_Q6",7],
-    ["정신질환자들은 세련되고 교양이 있는 것 같다.","s3_q7","P7_S3_Q7",7],
-    ["정신질환자들은 어린애 같다기보다는 어른스럽게 느껴진다.","s3_q8","P7_S3_Q8",7],
-    ["정신질환자들은 자제력이 있는 것 같다.","s3_q9","P7_S3_Q9",7],
-    ["정신질환자들은 지적이고 이성적이고 논리적인 것 같다.","s3_q10","P7_S3_Q10",7],
-    ["정신질환자들은 인간보다 못한 동물처럼 느껴진다.","s3_q11","P7_S3_Q11",7],
-    ["정신질환자들은 세련되지 못한 것 같다.","s3_q12","P7_S3_Q12",7],
-  ];
-
-  function renderSection(containerId, items){
-    const wrap = document.getElementById(containerId);
-    items.forEach(([text, name, qkey, scale])=>{
-      const q = document.createElement('div');
-      q.className = 'q';
-      q.innerHTML = `<div class="qname">${text}</div>
-                     <div class="scale" data-name="${name}" data-qkey="${qkey}" data-scale="${scale}"></div>`;
-      wrap.appendChild(q);
+    // 칩 생성
+    document.querySelectorAll('.scale').forEach(scale=>{
+      const name = scale.dataset.name;
+      for(let v=1; v<=5; v++){
+        const lab=document.createElement('label');
+        lab.className='chip';
+        lab.innerHTML=`<input type="radio" name="${name}" value="${v}"><strong>${v}</strong>`;
+        scale.appendChild(lab);
+      }
     });
-  }
-  renderSection('sec3', SEC3);
 
-  / / 칩 생성
-  document.querySelectorAll('.scale').forEach(scale=>{
-    const name = scale.dataset.name;
-    const max = parseInt(scale.dataset.scale,10) || 5;
-    for(let v=1; v<=max; v++){
-      const lab=document.createElement('label');
-      lab.className='chip';
-      lab.innerHTML=`<input type="radio" name="${name}" value="${v}"><strong>${v}</strong>`;
-      scale.appendChild(lab);
+    function refreshGroup(name){
+      document.querySelectorAll(`label.chip input[name="${name}"]`).forEach(r=>{
+        const lab=r.closest('label.chip');
+        lab.classList.toggle('selected',r.checked);
+      });
     }
-  });
 
-  function refreshGroup(name){
-    document.querySelectorAll(`label.chip input[name="${name}"]`).forEach(r=>{
-      r.closest('label.chip').classList.toggle('selected', r.checked);
+    document.addEventListener('change',e=>{
+      if(e.target.matches('input[type="radio"]')){
+        refreshGroup(e.target.name);
+        refreshBtn();
+      }
     });
-  }
 
-  document.addEventListener('change', e=>{
-    if(e.target.matches('input[type="radio"]')){
-      refreshGroup(e.target.name);
-      refreshBtn();
-    }
-  });
+    const REQUIRED=['q1','q2','q3'];
+    function allAnswered(){return REQUIRED.every(n=>document.querySelector(`input[name="${n}"]:checked`));}
+    function refreshBtn(){nextBtn.disabled=!allAnswered()||sending;}
+    refreshBtn();
 
-  const REQUIRED=[...document.querySelectorAll('.scale')].map(el=>el.dataset.name);
-  function answeredAll(){return REQUIRED.every(n=>document.querySelector(`input[name="${n}"]:checked`));}
-  function refreshBtn(){nextBtn.disabled=!answeredAll()||sending;}
-  refreshBtn();
-
-  // Firestore 저장
-  async function saveToFirestore(answers){
-    if(!pid) return;
-    try{
-      const docRef = doc(db, "responses", pid);
-      await setDoc(docRef, {
-        page_8: { answers, timestamp: serverTimestamp() }
-      }, { merge:true });
-      console.log("✅ Firestore 저장 완료 (page 8)");
-    }catch(e){
-      console.error("❌ Firestore 저장 실패:", e);
-      throw e;
-    }
-  }
-
-  function collectAnswers(){
-    return [...document.querySelectorAll('.scale')].map(scale=>{
-      const key = scale.dataset.qkey;
-      const selected = scale.querySelector('input:checked');
-      return { key, value: selected ? selected.value : null };
-    }).filter(a=>a.value!==null);
-  }
-
-  nextBtn.addEventListener('click', async ()=>{
-    if(!answeredAll() || sending) return;
-    sending = true; refreshBtn();
-
-    const answers = collectAnswers();
-
-    try{
-      await saveToFirestore(answers);
-      await new Promise(r=>setTimeout(r,300));
-    }catch(e){
-      console.warn(e);
+    // ✅ Firestore 저장
+    async function saveToFirestore(answers){
+      if(!pid) return;
+      try {
+        await addDoc(collection(db, "responses"), {
+          pid,
+          page: PAGE,
+          answers,
+          timestamp: new Date()
+        });
+        console.log("✅ Firestore 저장 완료 (page 7)");
+      } catch(e){
+        console.error("❌ Firestore 저장 실패:", e);
+        throw e;
+      }
     }
 
-    location.href = `${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
-  });
+    nextBtn.addEventListener('click', async ()=>{
+      if(!allAnswered()||sending) return;
+      sending = true; refreshBtn();
 
-})();
+      function valOf(name){return document.querySelector(`input[name="${name}"]:checked`).value;}
+      const answers=[
+        {key:'P6_Q1',value:valOf('q1')},
+        {key:'P6_Q2',value:valOf('q2')},
+        {key:'P6_Q3',value:valOf('q3')}
+      ];
+
+      try{
+        await saveToFirestore(answers);
+        // 약간의 지연 → 네트워크 플러시 확보
+        await new Promise(r=>setTimeout(r,300));
+      }catch(e){console.warn(e);}
+
+      location.href=`${NEXT_PAGE_URL}?pid=${encodeURIComponent(pid)}`;
+    });
+
+  })();
 </script>
-
 
 </body>
 </html>
