--- a/page11.html
+++ b/page11.html
@@ -22,8 +22,9 @@
 </main>
 
 <script type="module">
+/***** ▼ Firebase 초기 설정 ▼ *****/
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-app.js";
-import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
+import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/11.0.0/firebase-firestore.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyCEZEZItyfBTMg8tVWv3RQX19r6R-71pME",
@@ -37,6 +38,7 @@ const firebaseConfig = {
 
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
+/***** ▲ Firebase 설정 끝 ▲*/
 
 const PAGE = 11;
 const qs = new URLSearchParams(location.search);
@@ -44,37 +46,34 @@ const pid = qs.get('pid') || localStorage.getItem('exp_pid') || '';
 const saveStatus = document.getElementById('saveStatus');
 
 async function saveToFirestore(answers){
-  if(!pid) return false;
+  if(!pid) return;
   try{
-    const docRef = doc(db, "responses", pid);
-    await setDoc(docRef, {
-      [`page_${PAGE}`]: {
-        answers,
-        timestamp: serverTimestamp()
-      }
-    }, { merge: true });
-    console.log(`✅ Firestore 저장 완료 (page ${PAGE})`);
+    await addDoc(collection(db, "responses"), {
+      pid,
+      page: PAGE,
+      answers,
+      timestamp: new Date()
+    });
+    console.log("✅ Firestore 저장 완료 (page 11)");
     return true;
   }catch(e){
-    console.error(`❌ Firestore 저장 실패 (page ${PAGE}):`, e);
+    console.error("❌ Firestore 저장 실패:", e);
     return false;
   }
 }
 
-// 페이지 로드 시 완료 기록 저장
 async function finalize(){
-  const answers = [
+  const ok = await saveToFirestore([
     { key:'P10_COMPLETE', value:'1' },
     { key:'P10_MESSAGE', value:'연구 종료 안내 표시' },
     { key:'STUDY_STATUS', value:'complete' }
-  ];
-  const ok = await saveToFirestore(answers);
+  ]);
   saveStatus.textContent = ok ? '저장 완료' : '저장 실패(네트워크 확인 필요)';
 }
 
 finalize();
 
-// 페이지 닫기/ 새로고침 대비 안전 저장
+// 페이지 닫기/새로고침 대비 안전 저장
 window.addEventListener('beforeunload', ()=>{
   saveToFirestore([
     { key:'P10_COMPLETE', value:'1' },
@@ -83,7 +82,6 @@ window.addEventListener('beforeunload', ()=>{
   ]);
 });
 </script>
-
 
 </body>
 </html>
